--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 pandas
-streamlit
 matplotlib
-transformers
-torch
-tokenizers
-pickle
-requests
+streamlit==1.23.1
+requests==2.31.0
+torch==2.3.1
+transformers==4.21.0
+tokenizers==0.10.3
