--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pandas
 matplotlib
-streamlit==1.23.1
-requests==2.31.0
-torch==2.3.1
-transformers==4.21.0
-tokenizers==0.12
+streamlit
+requests
+torch
+transformers
+tokenizers
